--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 }
 
 dependencies {
+	compile group: 'net.sf.opencsv', name: 'opencsv', version: '2.3'
+    compile 'org.jsoup:jsoup:1.10.2'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
